--- a/Ro_outstanding_sheet.html
+++ b/Ro_outstanding_sheet.html
@@ -534,10 +534,10 @@
         const csvContent = data.map(row => row.join(',')).join('\n');
 
         // GitHub API details
-        const owner = 'servodata5'; // Replace with your GitHub username
-        const repo = 'nissa'; // Replace with your repository name
-        const path = 'portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_Customer_Sheet_Data.csv'; // Path to the file in the repository
-        const token = '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'; // Replace with your GitHub PAT
+        const owner = 'servodata98'; // Replace with your GitHub username
+        const repo = 'outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb'; // Replace with your repository name
+        const path = 'outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_Customer_Sheet_Data.csv'; // Path to the file in the repository
+        const token = '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'; // Replace with your GitHub PAT
 
         // Get the current SHA of the file (if it exists)
         let sha = null;
@@ -576,10 +576,10 @@
 
     // Function to load data from GitHub
     async function loadFromGitHub() {
-        const owner = 'servodata5'; // Replace with your GitHub username
-        const repo = 'nissa'; // Replace with your repository name
-        const path = 'portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_Customer_Sheet_Data.csv'; // Path to the file in the repository
-        const token = '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'; // Replace with your GitHub PAT
+        const owner = 'servodata98'; // Replace with your GitHub username
+        const repo = 'outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb'; // Replace with your repository name
+        const path = 'outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_Customer_Sheet_Data.csv'; // Path to the file in the repository
+        const token = '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'; // Replace with your GitHub PAT
 
         try {
             // Fetch the file content from GitHub
@@ -756,10 +756,10 @@ async function saveToGitHub() {
     const csvContent = data.map(row => row.join(',')).join('\n');
 
     // GitHub API details
-    const owner = 'servodata5'; // Replace with your GitHub username
-    const repo = 'nissa'; // Replace with your repository name
-    const path = 'portal/outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_Customer_Sheet_Data.csv'; // Path to the file in the repository
-    const token = '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'; // Replace with your GitHub PAT
+    const owner = 'servodata98'; // Replace with your GitHub username
+    const repo = 'outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb'; // Replace with your repository name
+    const path = 'outstandingsheetxczdv-bnmhgdaegthm-datkhfscbnlpmnb/RO_Customer_Sheet_Data.csv'; // Path to the file in the repository
+    const token = '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'; // Replace with your GitHub PAT
 
     // Get the current SHA of the file (if it exists)
     let sha = null;
